--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                         <ul>
                             <li class="wow fadeInLeft" data-wow-duration="300ms" data-wow-delay="300ms">
                                 <div class="blog-img">
-                                    <img src="images/blog/seabass.png" alt="blog-img">
+                                    <img src="images/blog/seabass.PNG" alt="blog-img">
                                 </div>
                                 <div class="content-right">
                                     <h3>Delicious Sea Bass</h3>
