Much needed changes to blog including typos
Also removed controversial laft wing reference and mention of torture!!

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                             <ul>
                                 <li>
                                     <h4><a href="#">Nov-9-2020</a></h4>
-                                    <p>View Bar & Lounge finally launchs to much acclaim.  Peter Marsahll awards the team top marks.</p>
+                                    <p>View Bar & Lounge finally launches to much acclaim.  Peter Marshall awards the team top marks.</p>
                                 </li>
                                 <li>
                                     <h4><a href="#">Nov-7-2015</a></h4>
@@ -535,13 +535,12 @@
                                     <h4><a href="#">Oct-1-2020</a></h4>
                                     <p>Peter Marshall announces £1,000,000 price for the best human-computer interface.  Peter hired Wembley Stadium for the l(a)unch.
                                         Crowds thronged Regent Street to catch a glimpse of Peter.  Police cordons kept the product developers at bay.  Pip claimed 
-                                        that they had been robbed of the credit.  Simen and Will had joined forces.  The only one team member to
-                                        survive and gain credits wasn't available for comment.
+                                        that they had been robbed of the credit.  Simen and Will had joined forces.  Fakirah was positive about the whole thing. The remaining team member wasn't available for comment.
                                     </p>
                                 </li>
                                 <li>
                                     <h4><a href="#">Sep-24-2020</a></h4>
-                                    <p>Peter Marshall conceves of a way of torturing his undergraduate students without falling foul of the law.  President Putin said it was a very good day for British democracy.</p>
+                                    <p>Peter Marshall concieves of a way of testing his undergraduate students without falling foul of the law.  Boris Johnson said it was a very good day for British democracy.</p>
                                 </li>
                             </ul>                
                         </div>
@@ -618,7 +617,7 @@
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <div class="block">
-                        <p>Copyright &copy; 2016 By <a href="http://www.gridgum.com">Gridgum</a></p>
+                        <p>Copyright &copy; 2016 By <a href="http://www.gridgum.com">Gridgum</a> View Bar & Lounge &trade; 2020</p>
                     </div>
                 </div>
             </div>
