--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                                         <div class="item-title">
                                             <h2>Cheese and Ham</h2>
                                             <div class="border-bottom"></div>
-                                            <span>$ 25.00</span>
+                                            <span>£ 25.00</span>
                                         </div>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                                     </div>
@@ -209,7 +209,7 @@
                                         <div class="item-title">
                                             <h2>Bacon and Bread</h2>
                                             <div class="border-bottom"></div>
-                                            <span>$ 10.00</span>
+                                            <span>£ 10.00</span>
                                         </div>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                                     </div>
@@ -219,7 +219,7 @@
                                         <div class="item-title">
                                             <h2>Omlette</h2>
                                             <div class="border-bottom"></div>
-                                            <span>$ 15.00</span>
+                                            <span>£ 15.00</span>
                                         </div>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                                     </div>
@@ -239,7 +239,7 @@
                                         <div class="item-title">
                                             <h2>Fresh meat with onion</h2>
                                             <div class="border-bottom"></div>
-                                            <span>$ 35.00</span>
+                                            <span>£ 35.00</span>
                                         </div>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                                     </div>
@@ -249,7 +249,7 @@
                                         <div class="item-title">
                                             <h2>Potato salad</h2>
                                             <div class="border-bottom"></div>
-                                            <span>$ 17.00</span>
+                                            <span>£ 17.00</span>
                                         </div>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                                     </div>
