Changed meal descriptions

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                             <div class="border-bottom"></div>
                                             <span>£ 25.00</span>
                                         </div>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                                        <p>Cheese with a little bit of ham on the top, oron the bottom if you prefer.</p>
                                     </div>
                                 </li>
                                 <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms">
@@ -211,7 +211,7 @@
                                             <div class="border-bottom"></div>
                                             <span>£ 10.00</span>
                                         </div>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                                        <p>Two rashers of bacon with a piece of bread in the middle.</p>
                                     </div>
                                 </li>
                                 <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="500ms">
@@ -221,7 +221,7 @@
                                             <div class="border-bottom"></div>
                                             <span>£ 15.00</span>
                                         </div>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                                        <p>Egg and stuff.</p>
                                     </div>
                                 </li>
                                 <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="600ms">
@@ -229,9 +229,9 @@
                                         <div class="item-title">
                                             <h2>Coffee / Tea</h2>
                                             <div class="border-bottom"></div>
-                                            <span>$ 5.00</span>
+                                            <span>£ 5.00</span>
                                         </div>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                                        <p>Hot beverages, but you can't take them away, try Starbucks for that.</p>
                                     </div>
                                 </li>
                                 <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="700ms">
@@ -241,7 +241,7 @@
                                             <div class="border-bottom"></div>
                                             <span>£ 35.00</span>
                                         </div>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                                        <p>Lots and lots of fried onions with a touch of meat or tofu if you are vegan.</p>
                                     </div>
                                 </li>
                                 <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="800ms">
@@ -251,7 +251,7 @@
                                             <div class="border-bottom"></div>
                                             <span>£ 17.00</span>
                                         </div>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+                                        <p>Lettuce, tomatoe, celery and beetroot with chipped, fried, boiled or jacket potatoes.  Cucumbers extra.</p>
                                     </div>
                                 </li>
                             </ul>
