--- a/Inventory/index.html
+++ b/Inventory/index.html
@@ -2,19 +2,22 @@
 <html>
 
 <head>
-    <title>Login and Registration Form</title>
     <link rel="stylesheet" href="style.css">
+    <img src="images/view.png" alt="logo" class="logo">
+
 </head>
 
 <body>
     <div class="loginbox">
-        <img src="person.png" class="person">
+        <img src="images/person.png" class="person">
         <h1>Inventory management</h1>
         <form>
             <p> View the categories</p>
     </div>
     </form>
     <div class="box"></div>
+    <div class="boxT">
+    </div>
     <table class="table">
         <thead>
             <tr>
@@ -47,9 +50,11 @@
     </table>
 
     </div>
+
     <button class="button">Subcategories</button>
     <button class="button">Notes</button>
     <button class="button">Edit categories</button>
+
 </body>
 
 </html>
