Management Work Finished
by William :)

--- a/Management/customerdetails.html
+++ b/Management/customerdetails.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Employee Details</title>
+	<title>Customer Details</title>
 		<link rel="stylesheet" type="text/css" href="style2.css">
 </head>
 <body>
 	<div class="loginbox">
 		<img src="person.png" class="person">
-		<h1>Employee Details</h1>
+		<h1>Customer Details</h1>
 
 		<div class="navbar">
 			<a class="active" href="#home">Home</a>
@@ -41,10 +41,10 @@
 	<div class="row">
 		<div class="column">
 		  <div class="card">
-			<img src="test1.jpg" alt="Jane" style="width:100%">
+			<img src="test10.jpg" alt="Kira" style="width:100%">
 			<div class="container">
-			  <h2>Jane Smith</h2>
-			  <p class="title">Store Assistant</p>
+			  <h2>Kira Fowler</h2>
+			  <p class="title">Customer</p>
 			  <br>
 			  <p>example@example.com</p>
 			  <br>
@@ -55,10 +55,10 @@
 	  
 		<div class="column">
 		  <div class="card">
-			<img src="test2.jpg" alt="Peter" style="width:100%">
+			<img src="test10.jpg" alt="Carly" style="width:100%">
 			<div class="container">
-			  <h2>Peter Davidson</h2>
-			  <p class="title">Store Assistant</p>
+			  <h2>Carly Long</h2>
+			  <p class="title">Customer</p>
 			  <br>
 			  <p>example@example.com</p>
 			  <br>
@@ -69,10 +69,10 @@
 	  
 		<div class="column">
 		  <div class="card">
-			<img src="test3.jpg" alt="Ben" style="width:100%">
+			<img src="test10.jpg" alt="Peter" style="width:100%">
 			<div class="container">
-			  <h2>Ben Reynes</h2>
-			  <p class="title">Assistant Manager</p>
+			  <h2>Peter Marshall</h2>
+			  <p class="title">Customer </p>
 			  <br>
 			  <p>example@example.com</p>
 			  <br>
@@ -85,10 +85,10 @@
 	  <div class="row">
 		<div class="column">
 		  <div class="card">
-			<img src="test4.jpg" alt="Sam" style="width:100%">
+			<img src="test10.jpg" alt="Paula" style="width:100%">
 			<div class="container">
-			  <h2>Sam Thompson</h2>
-			  <p class="title">Store Assistant</p>
+			  <h2>Paula Bradford</h2>
+			  <p class="title">Customer</p>
 			  <br>
 			  <p>example@example.com</p>
 			  <br>
@@ -99,10 +99,10 @@
 	  
 		<div class="column">
 		  <div class="card">
-			<img src="test5.jpg" alt="Jasmine" style="width:100%">
+			<img src="test10.jpg" alt="Willie" style="width:100%">
 			<div class="container">
-			  <h2>Jasmine Jeffrey</h2>
-			  <p class="title">Store Assistant</p>
+			  <h2>Willia Padilla</h2>
+			  <p class="title">Customer</p>
 			  <br>
 			  <p>example@example.com</p>
 			  <br>
@@ -113,10 +113,10 @@
 	  
 		<div class="column">
 		  <div class="card">
-			<img src="test6.jpg" alt="Bethany" style="width:100%">
+			<img src="test10.jpg" alt="Patricia" style="width:100%">
 			<div class="container">
-			  <h2>Bethany Kemp</h2>
-			  <p class="title">Store Assistant</p>
+			  <h2>Patricia Tevino</h2>
+			  <p class="title">Customer</p>
 			  <br>
 			  <p>example@example.com</p>
 			  <br>
@@ -129,10 +129,10 @@
 	  <div class="row">
 		<div class="column">
 		  <div class="card">
-			<img src="test7.jpg" alt="Tom" style="width:100%">
+			<img src="test10.jpg" alt="Emilia" style="width:100%">
 			<div class="container">
-			  <h2>Tom Birch</h2>
-			  <p class="title">Store Assistant</p>
+			  <h2>Emilia Everett</h2>
+			  <p class="title">Customer</p>
 			  <br>
 			  <p>example@example.com</p>
 			  <br>
@@ -143,10 +143,10 @@
 	  
 		<div class="column">
 		  <div class="card">
-			<img src="test8.jpg" alt="James" style="width:100%">
+			<img src="test10.jpg" alt="Milly" style="width:100%">
 			<div class="container">
-			  <h2>James Kennedy</h2>
-			  <p class="title">Assistant Manager</p>
+			  <h2>Milly Goodman</h2>
+			  <p class="title">Customer</p>
 			  <br>
 			  <p>example@example.com</p>
 			  <br>
@@ -157,10 +157,10 @@
 	  
 		<div class="column">
 		  <div class="card">
-			<img src="test9.jpg" alt="Teigan" style="width:100%">
+			<img src="test10.jpg" alt="Connie" style="width:100%">
 			<div class="container">
-			  <h2>Teigan Bonze</h2>
-			  <p class="title">Store Assistant</p>
+			  <h2>Connie Knight</h2>
+			  <p class="title">Customer</p>
 			  <br>
 			  <p>example@example.com</p>
 			  <br>
