--- a/Management/annoucements.html
+++ b/Management/annoucements.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Management Homepage</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Annoucements</title>
+		<link rel="stylesheet" type="text/css" href="style4.css">
 </head>
 <body>
 	<div class="loginbox">
 		<img src="person.png" class="person">
-		<h1>Management Homepage</h1>
+		<h1>Employee Annoucements</h1>
 		
 		<div class="navbar">
 			<div class="dropdown">
@@ -30,8 +30,24 @@
 				</div>
 			</div>
 		  </div>
-
-
+			<br>
+		  <div class="announcement">
+			<h2>Announcement -  15:45 12/11/20</h2>
+			<br>
+			<p>Hello,</p>
+			<p>We still have a lot of unassigned shifts for the coming week, make sure to sign up to shift or else we will have to force shifts.</p>
+			<br>
+			<p>- Assistent Manager Ben Reynes</p>
+		  </div>
+		  <br>
+		  <div class="announcement">
+			<h2>Announcement - 17:23 11/11/20</h2>
+			<br>
+			<p>Hello,</p>
+			<p>Excellent work over the last week! You were all excellent! We have a busy week next week coming up, make sure to keep on working!</p>
+			<br>
+			<p>- Assistent Manager Ben Reynes</p>
+		  </div>
 		  
 		</div>
 
