Too many index.htmls

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <img src="img/vblogo.png">
     <p></p>
     <form>
-      <input name="website" type="button" formaction="frontend-static/index.html" value="website"></form>
+      <input name="website" type="button" formaction="frontend-static/website.html" value="website"></form>
   </div>
 
   <div class="loginbox">
