--- a/launch.html
+++ b/launch.html
@@ -35,7 +35,7 @@
     <div style="text-align:center">
       <form name="portal">
         <button class="btn-lg" formaction="management.html">Management</button>
-        <button class="btn-lg" formaction="inventory/inventory.html">Inventory Management</button>
+        <button class="btn-lg" formaction="Inventory/inventory.html">Inventory Management</button>
         <button class="btn-lg" formaction="ServiceStaff/tables.html">Service Staff</button>
       </form>
     </div>
