--- a/Inventory/main.html
+++ b/Inventory/main.html
@@ -13,21 +13,21 @@
     </div>
 
     <div class="container">
-        <a href="C:/Users/simen/Documents/GitHub/viewbarandlounge/Inventory/food.html" target="_blank"> <img src="images/meat.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="https://comp5008.github.io/viewbarandlounge/Inventory/food.html?" target="_blank"> <img src="images/meat.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Food</div>
         </div>
     </div>
 
     <div class="container2">
-        <a href="C:/Users/simen/Documents/GitHub/viewbarandlounge/Inventory/drink.html" target="_blank"> <img src="images/soda.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="https://comp5008.github.io/viewbarandlounge/Inventory/drink.html?" target="_blank"> <img src="images/soda.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Drinks</div>
         </div>
     </div>
 
     <div class="container3">
-        <a href="C:/Users/simen/Documents/GitHub/viewbarandlounge/Inventory/equipment.html" target="_blank"> <img src="images/kitchen.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="https://comp5008.github.io/viewbarandlounge/Inventory/equipment.html?" target="_blank"> <img src="images/kitchen.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Equipment
             </div>
