--- a/management.html
+++ b/management.html
@@ -16,9 +16,9 @@
           <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-          <a href="#">Shifts</a>
-          <a href="employeedetails.html">Employees</a>
-          <a href="#">Annoucements</a>
+          <a href="Management/shifts.html">Shifts</a>
+          <a href="Management/employeedetails.html">Employees</a>
+          <a href="Management/announcements">Annoucements</a>
           </div>
         </div>
         <div class="dropdown">
@@ -26,7 +26,7 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="#">Customers</a>
+            <a href="Management/customerdetails">Customers</a>
             <a href="#">Reservations</a>
         </div>
           <button class="btn-lg" formaction="launch.html">Back</button>
