--- a/Inventory/food.html
+++ b/Inventory/food.html
@@ -13,40 +13,40 @@
     </div>
 
     <div class="container">
-        <a href="C:\Users\simen\Documents\GitHub\viewbarandlounge\Inventory\notes pages\food - meat.html" target="_blank"> <img src="images/meat.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="https://comp5008.github.io/viewbarandlounge/Inventory/notes pages/food-meat.html?" target="_blank"> <img src="images/meat.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Meats</div>
         </div>
     </div>
 
     <div class="container2">
-        <a href="C:\Users\simen\Documents\GitHub\viewbarandlounge\Inventory\notes pages\food - fruits.html" target="_blank"> <img src="images/fruit.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="https://comp5008.github.io/viewbarandlounge/Inventory/notes pages/food-fruits.html?" target="_blank"> <img src="images/fruit.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Fruits</div>
         </div>
     </div>
 
     <div class="container3">
-        <a href="C:\Users\simen\Documents\GitHub\viewbarandlounge\Inventory\notes pages\food - veg.html" target="_blank"> <img src="images/veg.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="https://comp5008.github.io/viewbarandlounge/Inventory/notes pages/food-veg.html?" target="_blank"> <img src="images/veg.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Vegetables
             </div>
         </div>
     </div>
     <div class="container4">
-        <a href="C:\Users\simen\Documents\GitHub\viewbarandlounge\Inventory\notes pages\food - grains.html" target="_blank"> <img src="images/grains.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="https://comp5008.github.io/viewbarandlounge/Inventory/notes pages/food-grains.html?" target="_blank"> <img src="images/grains.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Grains</div>
         </div>
     </div>
     <div class="container5">
-        <a href="C:\Users\simen\Documents\GitHub\viewbarandlounge\Inventory\notes pages\food - dairy.html" target="_blank"> <img src="images/dairy.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="https://comp5008.github.io/viewbarandlounge/Inventory/notes pages/food-dairy.html?" target="_blank"> <img src="images/dairy.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Dairy</div>
         </div>
     </div>
     <div class="container6">
-        <a href="C:\Users\simen\Documents\GitHub\viewbarandlounge\Inventory\notes pages\food - oils.html" target="_blank"> <img src="images/oils.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="https://comp5008.github.io/viewbarandlounge/Inventory/notes pages/food-oils.html?" target="_blank"> <img src="images/oils.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Oils</div>
         </div>
