--- a/Inventory/food.html
+++ b/Inventory/food.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="container">
-        <a href="https://comp5008.github.io/viewbarandlounge/Inventory/notes pages/food-meat.html?" target="_blank"> <img src="images/meat.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="https://comp5008.github.io/viewbarandlounge/Inventory/notespages/food-meat.html?" target="_blank"> <img src="images/meat.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Meats</div>
         </div>
