--- a/Management/shifts.html
+++ b/Management/shifts.html
@@ -37,7 +37,7 @@
 					<td><p style="text-align:center;">09:00-17:00</p></td>
 					<td><p style="text-align:center;">Customer Assistent</p></td>
 					<td><p style="text-align:center;">11/10/20</p></td>
-					<td><a href="#"><p style="text-align:center;">Assign Shift</a></p></td>
+					<td><a href="assignshift.html"><p style="text-align:center;">Assign Shift</a></p></td>
 				</tr>
 				<tr>
 					<td><p style="text-align:center;">09:00-17:00</p></td>
@@ -49,7 +49,7 @@
 					<td><p style="text-align:center;">09:00-17:00</p></td>
 					<td><p style="text-align:center;">Customer Assistent</p></td>
 					<td><p style="text-align:center;">12/10/20</p></td>
-					<td><a href="#"><p style="text-align:center;">Assign Shift</a></p></td>
+					<td><a href="assignshift.html"><p style="text-align:center;">Assign Shift</a></p></td>
 				</tr>
 				<tr>
 					<td><p style="text-align:center;">09:00-17:00</p></td>
