Links should be working now

--- a/ServiceStaff/tables.html
+++ b/ServiceStaff/tables.html
@@ -28,58 +28,58 @@
 
         <tr>
             <td>1</td>
-            <td><button class="button"><a href="C:\Users\piper\Documents\GitHub\viewbarandlounge\ServiceStaff\takeOrder.html" style="color:black">Take order</a></button> <br>
-				<button class="button"><a href="C:\Users\piper\Documents\GitHub\viewbarandlounge\ServiceStaff\takePayment.html" style="color:black">Take Payment</a></button> <br>
+            <td><button class="button"><a href="takeOrder.html" style="color:black">Take order</a></button> <br>
+				<button class="button"><a href="takePayment.html" style="color:black">Take Payment</a></button> <br>
 				<button class="button" onclick="togglePopup()">Clear Table</button> <br>
 			</td>
             <td colspan="2">C</td>
         </tr>
         <tr>
             <td>2</td>
-            <td><button class="button"><a href="C:\Users\piper\Documents\GitHub\viewbarandlounge\ServiceStaff\takeOrder.html" style="color:black">Take order</a></button> <br>
-				<button class="button"><a href="C:\Users\piper\Documents\GitHub\viewbarandlounge\ServiceStaff\takePayment.html" style="color:black">Take Payment</a></button> <br>
+            <td><button class="button"><a href="takeOrder.html" style="color:black">Take order</a></button> <br>
+				<button class="button"><a href="takePayment.html" style="color:black">Take Payment</a></button> <br>
 				<button class="button">Clear Table</button> <br></td>
             <td colspan="2">C</td>
         </tr>
         <tr>
             <td>3</td>
-            <td><button class="button"><a href="C:\Users\piper\Documents\GitHub\viewbarandlounge\ServiceStaff\takeOrder.html" style="color:black">Take order</a></button> <br>
-				<button class="button"><a href="C:\Users\piper\Documents\GitHub\viewbarandlounge\ServiceStaff\takePayment.html" style="color:black">Take Payment</a></button> <br>
+            <td><button class="button"><a href="takeOrder.html" style="color:black">Take order</a></button> <br>
+				<button class="button"><a href="takePayment.html" style="color:black">Take Payment</a></button> <br>
 				<button class="button">Clear Table</button> <br></td>
             <td colspan="2">C</td>
         </tr>
         <tr>
             <td>4</td>
-            <td><button class="button"><a href="C:\Users\piper\Documents\GitHub\viewbarandlounge\ServiceStaff\takeOrder.html" style="color:black">Take order</a></button> <br>
-				<button class="button"><a href="C:\Users\piper\Documents\GitHub\viewbarandlounge\ServiceStaff\takePayment.html" style="color:black">Take Payment</a></button> <br>
+            <td><button class="button"><a href="takeOrder.html" style="color:black">Take order</a></button> <br>
+				<button class="button"><a href="takePayment.html" style="color:black">Take Payment</a></button> <br>
 				<button class="button">Clear Table</button> <br></td>
             <td colspan="2">C</td>
         </tr>
 		<tr>
             <td>5</td>
-            <td><button class="button"><a href="C:\Users\piper\Documents\GitHub\viewbarandlounge\ServiceStaff\takeOrder.html" style="color:black">Take order</a></button> <br>
-				<button class="button"><a href="C:\Users\piper\Documents\GitHub\viewbarandlounge\ServiceStaff\takePayment.html" style="color:black">Take Payment</a></button> <br>
+            <td><button class="button"><a href="takeOrder.html" style="color:black">Take order</a></button> <br>
+				<button class="button"><a href="takePayment.html" style="color:black">Take Payment</a></button> <br>
 				<button class="button">Clear Table</button> <br></td>
             <td colspan="2">C</td>
         </tr>
 		<tr>
             <td>6</td>
-            <td><button class="button"><a href="C:\Users\piper\Documents\GitHub\viewbarandlounge\ServiceStaff\takeOrder.html" style="color:black">Take order</a></button> <br>
-				<button class="button"><a href="C:\Users\piper\Documents\GitHub\viewbarandlounge\ServiceStaff\takePayment.html" style="color:black">Take Payment</a></button> <br>
+            <td><button class="button"><a href="takeOrder.html" style="color:black">Take order</a></button> <br>
+				<button class="button"><a href="takePayment.html" style="color:black">Take Payment</a></button> <br>
 				<button class="button">Clear Table</button> <br></td>
             <td colspan="2">C</td>
         </tr>
 		<tr>
             <td>7</td>
-            <td><button class="button"><a href="C:\Users\piper\Documents\GitHub\viewbarandlounge\ServiceStaff\takeOrder.html" style="color:black">Take order</a></button> <br>
-				<button class="button"><a href="C:\Users\piper\Documents\GitHub\viewbarandlounge\ServiceStaff\takePayment.html" style="color:black">Take Payment</a></button> <br>
+            <td><button class="button"><a href="takeOrder.html" style="color:black">Take order</a></button> <br>
+				<button class="button"><a href="takePayment.html" style="color:black">Take Payment</a></button> <br>
 				<button class="button">Clear Table</button> <br></td>
             <td colspan="2">C</td>
         </tr>
 		<tr>
             <td>8</td>
-            <td><button class="button"><a href="C:\Users\piper\Documents\GitHub\viewbarandlounge\ServiceStaff\takeOrder.html" style="color:black">Take order</a></button> <br>
-				<button class="button"><a href="C:\Users\piper\Documents\GitHub\viewbarandlounge\ServiceStaff\takePayment.html" style="color:black">Take Payment</a></button> <br>
+            <td><button class="button"><a href="takeOrder.html" style="color:black">Take order</a></button> <br>
+				<button class="button"><a href="takePayment.html" style="color:black">Take Payment</a></button> <br>
 				<button class="button">Clear Table</button> <br></td>
             <td colspan="2">C</td>
         </tr>
