--- a/Management/customerdetails.html
+++ b/Management/customerdetails.html
@@ -10,15 +10,14 @@
 		<h1>Customer Details</h1>
 
 		<div class="navbar">
-			<a class="active" href="#home">Home</a>
 			<div class="dropdown">
 			  <button class="dropbtn">Employee Information
 				<i class="fa fa-caret-down"></i>
 			  </button>
 			  <div class="dropdown-content">
-				<a href="#">Shifts</a>
-				<a href="#">Employees</a>
-				<a href="#">Annoucements</a>
+				<a href="shifts.html">Shifts</a>
+				<a href="employeedetails.html">Employees</a>
+				<a href="annoucements.html">Annoucements</a>
 			  </div>
 			</div>
 			<div class="dropdown">
@@ -26,9 +25,9 @@
 				  <i class="fa fa-caret-down"></i>
 				</button>
 				<div class="dropdown-content">
-				  <a href="#">Customers</a>
-				  <a href="#">Reservations</a>
-		  </div>
+				  <a href="customerdetails.html">Customers</a>
+				  <a href="customer reservations.html">Reservations</a>
+				</div>
 
 		</div>
 
