--- a/Management/customer reservations.html
+++ b/Management/customer reservations.html
@@ -15,9 +15,9 @@
 				<i class="fa fa-caret-down"></i>
 			  </button>
 			  <div class="dropdown-content">
-				<a href="#">Shifts</a>
-				<a href="#">Employees</a>
-				<a href="#">Annoucements</a>
+				<a href="shifts.html">Shifts</a>
+				<a href="employeedetails.html">Employees</a>
+				<a href="annoucements.html">Annoucements</a>
 			  </div>
 			</div>
 			<div class="dropdown">
@@ -25,8 +25,8 @@
 				  <i class="fa fa-caret-down"></i>
 				</button>
 				<div class="dropdown-content">
-				  <a href="#">Customers</a>
-				  <a href="#">Reservations</a>
+				  <a href="customerdetails.html">Customers</a>
+				  <a href="customer reservations.html">Reservations</a>
 				</div>
 			</div>
 		  </div>
