A few minor changes
Will update it fully later on

--- a/Inventory/drink.html
+++ b/Inventory/drink.html
@@ -51,7 +51,7 @@
             <div class="text">Hot drinks</div>
         </div>
     </div>
-    <button class="button2">Go back</button>
+    <a href="main.html"> <button class="button2">Go back</button> </a>
 
 
 </body>
