--- a/Inventory/main.html
+++ b/Inventory/main.html
@@ -13,29 +13,29 @@
     </div>
 
     <div class="container">
-        <a href="C:/Users/simen/Documents/GitHub/viewbarandlounge/Inventory/food.html" target="_blank"> <img src="images/meat.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="food.html" target="_blank"> <img src="images/meat.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Food</div>
         </div>
     </div>
 
     <div class="container2">
-        <a href="C:/Users/simen/Documents/GitHub/viewbarandlounge/Inventory/drink.html" target="_blank"> <img src="images/soda.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="drink.html" target="_blank"> <img src="images/soda.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Drinks</div>
         </div>
     </div>
 
     <div class="container3">
-        <a href="C:/Users/simen/Documents/GitHub/viewbarandlounge/Inventory/equipment.html" target="_blank"> <img src="images/kitchen.jpg" alt="Avatar" class="image" style="width:100%"></a>
+        <a href="equipment.html" target="_blank"> <img src="images/kitchen.jpg" alt="Avatar" class="image" style="width:100%"></a>
         <div class="middle">
             <div class="text">Equipment
             </div>
         </div>
     </div>
 
-    <button class="button2">Notes</button>
-    <button class="button2">Edit categories</button>
+    <a href="main.html"> <button class="button2">Notes</button> </a>
+    <a href="main.html"> <button class="button2">Edit Categories</button> </a>
 
 </body>
 
