--- a/Inventory/notes/drink - wine.html
+++ b/Inventory/notes/drink - wine.html
@@ -10,7 +10,7 @@
 <body>
     <div class="loginbox">
         <img src="../images/person.png" class="person">
-        <h1>View notes and storage status for grains</h1>
+        <h1>View notes and storage status for wine</h1>
         <form>
             <p> Notepad:</p>
     </div>
@@ -33,32 +33,32 @@
         <tbody>
             <tr>
                 <td>1</td>
-                <td>Bread</td>
-                <td>27</td>
+                <td>Cabernet Sauvignon</td>
+                <td>40</td>
                 <td>09-11-2020</td>
             </tr>
             <tr>
                 <td>2</td>
-                <td>Pasta</td>
-                <td>56</td>
+                <td>Merlot</td>
+                <td>25</td>
                 <td>09-11-2020</td>
             </tr>
             <tr>
                 <td>3</td>
-                <td>Tortillas</td>
-                <td>44</td>
+                <td>Pinot noir</td>
+                <td>33</td>
                 <td>09-11-2020</td>
             </tr>
             <tr>
                 <td>4</td>
-                <td>Rice</td>
-                <td>30</td>
+                <td>Moscato</td>
+                <td>22</td>
                 <td>09-11-2020</td>
             </tr>
             <tr>
                 <td>5</td>
-                <td>Crackers</td>
-                <td>30</td>
+                <td>Champagne</td>
+                <td>26</td>
                 <td>09-11-2020</td>
             </tr>
         </tbody>
@@ -66,7 +66,7 @@
     </div>
 
 
-    <button class="button3">Go back</button>
+    <a href="../drink.html"> <button class="button3">Go back</button> </a>
     <button class="button3">Edit categories</button>
 
 </body>
