--- a/Inventory/notes/food - fruits.html
+++ b/Inventory/notes/food - fruits.html
@@ -10,7 +10,7 @@
 <body>
     <div class="loginbox">
         <img src="../images/person.png" class="person">
-        <h1>View notes and storage status for oils</h1>
+        <h1>View notes and storage status for fruits</h1>
         <form>
             <p> Notepad:</p>
     </div>
@@ -33,32 +33,32 @@
         <tbody>
             <tr>
                 <td>1</td>
-                <td>Olive</td>
-                <td>45</td>
+                <td>Apple</td>
+                <td>30</td>
                 <td>09-11-2020</td>
             </tr>
             <tr>
                 <td>2</td>
-                <td>Coconut</td>
-                <td>21</td>
+                <td>Avocado</td>
+                <td>69</td>
                 <td>09-11-2020</td>
             </tr>
             <tr>
                 <td>3</td>
-                <td>Flaxseed</td>
-                <td>14</td>
+                <td>Berries</td>
+                <td>40</td>
                 <td>09-11-2020</td>
             </tr>
             <tr>
                 <td>4</td>
-                <td>Pumpkin seed</td>
-                <td>23</td>
+                <td>Citrus</td>
+                <td>43</td>
                 <td>09-11-2020</td>
             </tr>
             <tr>
                 <td>5</td>
-                <td>Sunflower</td>
-                <td>22</td>
+                <td>Tomatoes</td>
+                <td>55</td>
                 <td>09-11-2020</td>
             </tr>
         </tbody>
@@ -66,7 +66,7 @@
     </div>
 
 
-    <button class="button3">Go back</button>
+    <a href="../food.html"> <button class="button3">Go back</button> </a>
     <button class="button3">Edit categories</button>
 
 </body>
