--- a/Inventory/notes/food - grains.html
+++ b/Inventory/notes/food - grains.html
@@ -10,7 +10,7 @@
 <body>
     <div class="loginbox">
         <img src="../images/person.png" class="person">
-        <h1>View notes and storage status for dairy</h1>
+        <h1>View notes and storage status for grains</h1>
         <form>
             <p> Notepad:</p>
     </div>
@@ -33,32 +33,32 @@
         <tbody>
             <tr>
                 <td>1</td>
-                <td>Milk</td>
-                <td>77</td>
+                <td>Bread</td>
+                <td>27</td>
                 <td>09-11-2020</td>
             </tr>
             <tr>
                 <td>2</td>
-                <td>Cheese</td>
-                <td>76</td>
+                <td>Pasta</td>
+                <td>56</td>
                 <td>09-11-2020</td>
             </tr>
             <tr>
                 <td>3</td>
-                <td>Butter</td>
-                <td>66</td>
+                <td>Tortillas</td>
+                <td>44</td>
                 <td>09-11-2020</td>
             </tr>
             <tr>
                 <td>4</td>
-                <td>Yoghurt</td>
-                <td>34</td>
+                <td>Rice</td>
+                <td>30</td>
                 <td>09-11-2020</td>
             </tr>
             <tr>
                 <td>5</td>
-                <td>Ice cream</td>
-                <td>56</td>
+                <td>Crackers</td>
+                <td>30</td>
                 <td>09-11-2020</td>
             </tr>
         </tbody>
@@ -66,7 +66,7 @@
     </div>
 
 
-    <button class="button3">Go back</button>
+    <a href="../food.html"> <button class="button3">Go back</button> </a>
     <button class="button3">Edit categories</button>
 
 </body>
